--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import blogCardThreeImage from '../assets/blog-card-3.png'
 import emmieOneSquareImage from '../assets/emmie-1-square.png'
 import emmieOneImage from '../assets/emmie-1.png'
 import emmieTwoImage from '../assets/emmie-2.png'
-import momWoodsImage from '../assets/mom-woods.png'
+import momOneImage from '../assets/mom-1.png'
 import CTA from '../components/text/CTA.astro'
 import SectionHeader from '../components/text/SectionHeader.astro'
 import BlogCard from '../components/ui/BlogCard.astro'
@@ -21,7 +21,7 @@ import Layout from '../layouts/Layout.astro'
   <PageHeader
     title='<span class="font-bold text-xl text-red-900">Life coaching</span> for preconception, pregnancy, and beyond'
     subtitle="Experience your BEST pregnancy with life coaching"
-    image={momWoodsImage}
+    image={momOneImage}
     imageAlt="A mom with her baby in the woods"
   >
     <CTA type="link" href="/contact" text="Book a Free Call" class="m-auto md:m-0" />
