--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -60,7 +60,7 @@ import Subscribe from './Subscribe.astro'
     </div>
 
     <!-- Social icons -->
-    <div class="px-12 container border-red-200">
+    <div class="px-12 container-lg border-red-200">
       <div class="py-12 border-t-[1px]">
         <ul class="flex gap-8 md:justify-end">
           <li>
