--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,6 +8,7 @@ import CTA from '../components/text/CTA.astro'
 import ListItemOne from '../components/text/ListItemOne.astro'
 import ListItemTwo from '../components/text/ListItemTwo.astro'
 import SectionHeader from '../components/text/SectionHeader.astro'
+import BrandedIcon from '../components/ui/BrandedIcon.astro'
 import ImageAndText from '../components/ui/ImageAndText.astro'
 import PageHeader from '../components/ui/PageHeader.astro'
 import Layout from '../layouts/Layout.astro'
@@ -108,7 +109,7 @@ import Layout from '../layouts/Layout.astro'
 
         <div class="grid sm:grid-cols-2 md:grid-cols-3 gap-16 pt-sectionPadding pb-16">
           <article class="flex flex-col items-center gap-8 lsa lsa-slide-up no-repeat">
-            <Icon name="star" class="size-12 p-3 rounded-full bg-tan-100 flex-shrink-0" />
+            <BrandedIcon icon="star" />
             <h3>Power</h3>
             <ul class="flex flex-col gap-4">
               <ListItemOne
@@ -127,7 +128,7 @@ import Layout from '../layouts/Layout.astro'
           </article>
 
           <article class="flex flex-col items-center gap-8 lsa lsa-slide-up no-repeat delay-100">
-            <Icon name="star" class="size-12 p-3 rounded-full bg-tan-100 flex-shrink-0" />
+            <BrandedIcon icon="star" />
             <h3>Passenger</h3>
             <ul class="flex flex-col gap-4">
               <ListItemOne
@@ -142,7 +143,7 @@ import Layout from '../layouts/Layout.astro'
           </article>
 
           <article class="flex flex-col items-center gap-8 lsa lsa-slide-up no-repeat delay-200">
-            <Icon name="star" class="size-12 p-3 rounded-full bg-tan-100 flex-shrink-0" />
+            <BrandedIcon icon="star" />
             <h3>Passage</h3>
             <ul class="flex flex-col gap-4">
               <ListItemOne
