--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,10 @@ import PageHeader from '../components/ui/PageHeader.astro'
 import Layout from '../layouts/Layout.astro'
 ---
 
-<Layout title="Power Passenger Passage">
+<Layout
+  title="Power Passenger Passage"
+  description="Life coaching for preconception, pregnancy, and beyond. Experience your BEST pregnancy with life coaching."
+>
   <PageHeader
     title='<span class="font-bold text-xl text-red-900">Life coaching</span> for preconception, pregnancy, and beyond'
     subtitle="Experience your BEST pregnancy with life coaching"
@@ -106,7 +109,7 @@ import Layout from '../layouts/Layout.astro'
             dateAndReadTime="May 29, 2023 • 3 min read"
             title='Power Passenger Passage Love Letter No. 11: Being "Good"'
             text="I have recently heard more than one pregnant woman tell me that they just want to know how to be a “good” pregnant person. That they are..."
-            class="delay-100"
+            class="max-w-[350px] delay-100"
           />
           <BlogCard
             image={blogCardTwoImage}
@@ -114,7 +117,7 @@ import Layout from '../layouts/Layout.astro'
             dateAndReadTime="Jul 7, 2022 • 3 min read"
             title="Power Passenger Passage Love Letter No. 10: Shame"
             text="Hi Loves! I want to talk about shame. Shame is a particularly common emotion that can surface during pregnancy and motherhood. We receive..."
-            class="delay-200"
+            class="max-w-[350px] delay-200"
           />
           <BlogCard
             image={blogCardThreeImage}
@@ -122,7 +125,7 @@ import Layout from '../layouts/Layout.astro'
             dateAndReadTime="Jun 5, 2022 • 3 min read"
             title="Power Passenger Passage Love Letter No. 9: Perfectly Imperfect"
             text="Hello Loves! I have been putting out this blog monthly since September 2021. It is now June and I have skipped the month of May. And..."
-            class="delay-300"
+            class="max-w-[350px] delay-300"
           />
         </div>
 
