--- a/src/components/ui/BlogCard.astro
+++ b/src/components/ui/BlogCard.astro
@@ -6,22 +6,25 @@ export interface Props {
   imageAlt: string
   dateAndReadTime: string
   title: string
-  text: string
+  text?: string
+  isRow?: boolean
   class?: string
 }
 
-const { image, imageAlt, dateAndReadTime, title, text, class: className } = Astro.props
+const { image, imageAlt, dateAndReadTime, title, text, isRow, class: className } = Astro.props
 ---
 
-<article class={`${className} w-full max-w-[350px] lsa lsa-slide-up no-repeat`}>
-  <a class="flex flex-col gap-4 group" href="/">
+<article class={`${className} w-full lsa lsa-slide-up no-repeat`}>
+  <a class:list={['grid items-center gap-4 group', { 'md:grid-cols-2': isRow }]} href="/">
     <Picture src={image} alt={imageAlt} />
-    <span>{dateAndReadTime}</span>
-    <h3 class="text-base group-hover:text-red-900 transition">
-      {title}
-    </h3>
-    <p>
-      {text}
-    </p>
+
+    <div class="flex flex-col gap-4">
+      <span>{dateAndReadTime}</span>
+      <h3 class="text-base group-hover:text-red-900 transition">
+        {title}
+      </h3>
+
+      {text && <p>{text}</p>}
+    </div>
   </a>
 </article>
