--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,11 +1,19 @@
 ---
-// TODO: Replace with posts from CMS
-// TODO: Build /blog/[slug].astro for individual blog posts
-import blogCardOneImage from '../assets/blog-card-1.png'
+// TODO: Build + style posts in /blog/[slug].astro
+import type { SanityDocument } from '@sanity/client'
+import { sanityClient } from 'sanity:client'
 import BlogCard from '../components/ui/BlogCard.astro'
 import PageHeader from '../components/ui/PageHeader.astro'
 import Subscribe from '../components/ui/Subscribe.astro'
 import Layout from '../layouts/Layout.astro'
+
+const posts = (await sanityClient.fetch(
+  `*[_type == "post"] | order(publishedAt desc)`
+)) as SanityDocument[]
+
+const newestPost = posts[0]
+const recentPosts = posts.slice(1, 4)
+const remainingPosts = posts.slice(4)
 ---
 
 <Layout
@@ -25,38 +33,34 @@ import Layout from '../layouts/Layout.astro'
 
       <div class="grid lg:grid-cols-2 gap-12">
         <BlogCard
-          image={blogCardOneImage}
-          imageAlt=""
-          dateAndReadTime="May 29, 2023 • 3 min read"
-          title="Power Passenger Passage Love Letter No. 11: Being 'Good'"
-          text="I have recently heard more than one pregnant woman tell me that they just want to know how to be a “good” pregnant person. That they are..."
+          image={newestPost.mainImage}
+          imageAlt={newestPost.mainImage.alt}
+          dateAndReadTime={`${new Date(newestPost.publishedAt).toLocaleDateString('en-US', {
+            month: 'long',
+            day: 'numeric',
+            year: 'numeric',
+          })} • 3 min read`}
+          title={newestPost.title}
+          text={newestPost.description}
         />
 
         <div class="flex flex-col gap-12">
-          <BlogCard
-            image={blogCardOneImage}
-            imageAlt=""
-            dateAndReadTime="May 29, 2023 • 3 min read"
-            title="Power Passenger Passage Love Letter No. 11: Being 'Good'"
-            text="I have recently heard more than one pregnant woman tell me that they just want to know how to be a “good” pregnant person. That they are..."
-            isRow={true}
-          />
-          <BlogCard
-            image={blogCardOneImage}
-            imageAlt=""
-            dateAndReadTime="May 29, 2023 • 3 min read"
-            title="Power Passenger Passage Love Letter No. 11: Being 'Good'"
-            text="I have recently heard more than one pregnant woman tell me that they just want to know how to be a “good” pregnant person. That they are..."
-            isRow={true}
-          />
-          <BlogCard
-            image={blogCardOneImage}
-            imageAlt=""
-            dateAndReadTime="May 29, 2023 • 3 min read"
-            title="Power Passenger Passage Love Letter No. 11: Being 'Good'"
-            text="I have recently heard more than one pregnant woman tell me that they just want to know how to be a “good” pregnant person. That they are..."
-            isRow={true}
-          />
+          {
+            recentPosts.map((post) => (
+              <BlogCard
+                image={post.mainImage}
+                imageAlt={post.mainImage.alt}
+                dateAndReadTime={`${new Date(post.publishedAt).toLocaleDateString('en-US', {
+                  month: 'long',
+                  day: 'numeric',
+                  year: 'numeric',
+                })} • 3 min read`}
+                title={post.title}
+                text={post.description}
+                isRow={true}
+              />
+            ))
+          }
         </div>
       </div>
     </section>
@@ -66,48 +70,21 @@ import Layout from '../layouts/Layout.astro'
         <h2 class="mb-8">All Blog Posts</h2>
 
         <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-12">
-          <BlogCard
-            image={blogCardOneImage}
-            imageAlt=""
-            dateAndReadTime="May 29, 2023 • 3 min read"
-            title="Power Passenger Passage Love Letter No. 11: Being 'Good'"
-            text="I have recently heard more than one pregnant woman tell me that they just want to know how to be a “good” pregnant person. That they are..."
-          />
-          <BlogCard
-            image={blogCardOneImage}
-            imageAlt=""
-            dateAndReadTime="May 29, 2023 • 3 min read"
-            title="Power Passenger Passage Love Letter No. 11: Being 'Good'"
-            text="I have recently heard more than one pregnant woman tell me that they just want to know how to be a “good” pregnant person. That they are..."
-          />
-          <BlogCard
-            image={blogCardOneImage}
-            imageAlt=""
-            dateAndReadTime="May 29, 2023 • 3 min read"
-            title="Power Passenger Passage Love Letter No. 11: Being 'Good'"
-            text="I have recently heard more than one pregnant woman tell me that they just want to know how to be a “good” pregnant person. That they are..."
-          />
-          <BlogCard
-            image={blogCardOneImage}
-            imageAlt=""
-            dateAndReadTime="May 29, 2023 • 3 min read"
-            title="Power Passenger Passage Love Letter No. 11: Being 'Good'"
-            text="I have recently heard more than one pregnant woman tell me that they just want to know how to be a “good” pregnant person. That they are..."
-          />
-          <BlogCard
-            image={blogCardOneImage}
-            imageAlt=""
-            dateAndReadTime="May 29, 2023 • 3 min read"
-            title="Power Passenger Passage Love Letter No. 11: Being 'Good'"
-            text="I have recently heard more than one pregnant woman tell me that they just want to know how to be a “good” pregnant person. That they are..."
-          />
-          <BlogCard
-            image={blogCardOneImage}
-            imageAlt=""
-            dateAndReadTime="May 29, 2023 • 3 min read"
-            title="Power Passenger Passage Love Letter No. 11: Being 'Good'"
-            text="I have recently heard more than one pregnant woman tell me that they just want to know how to be a “good” pregnant person. That they are..."
-          />
+          {
+            remainingPosts.map((post) => (
+              <BlogCard
+                image={post.mainImage}
+                imageAlt={post.mainImage.alt}
+                dateAndReadTime={`${new Date(post.publishedAt).toLocaleDateString('en-US', {
+                  month: 'long',
+                  day: 'numeric',
+                  year: 'numeric',
+                })} • 3 min read`}
+                title={post.title}
+                text={post.description}
+              />
+            ))
+          }
         </div>
       </div>
     </section>
