feat(app): add cta to contact hero, direct links to calendar

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -24,7 +24,7 @@ import Layout from '../layouts/Layout.astro'
     image={emmieImage}
     imageAlt="Emmie Strassberg, Power Passenger Passage"
   >
-    <CTA type="link" href="/contact" text="Book a Free Call" class="m-auto md:m-0" />
+    <CTA type="link" href="/contact#schedule" text="Book a Free Call" class="m-auto md:m-0" />
   </PageHeader>
 
   <main>
@@ -171,7 +171,7 @@ import Layout from '../layouts/Layout.astro'
 
         <CTA
           type="link"
-          href="/contact"
+          href="/contact#schedule"
           text="Book a Free Call"
           class="m-auto lsa lsa-slide-up no-repeat delay-300"
         />
