--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ const recentPosts = posts.slice(0, 3)
     image={momOneImage}
     imageAlt="A mom with her baby in the woods"
   >
-    <CTA type="link" href="/contact" text="Book a Free Call" class="m-auto md:m-0" />
+    <CTA type="link" href="/contact#schedule" text="Book a Free Call" class="m-auto md:m-0" />
   </PageHeader>
 
   <main>
@@ -148,7 +148,7 @@ const recentPosts = posts.slice(0, 3)
         >
           <CTA
             type="link"
-            href="/contact"
+            href="/contact#schedule"
             text="Book Now"
             class="lsa lsa-slide-up delay-100 no-repeat"
           />
