--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -31,9 +31,12 @@ const { src: momAndDaughterImageWebp } = await getImage({
           We're here to guide you. Reach out here to start the conversation or schedule your free
           consultation!
         </p>
-        <div class="w-full lsa lsa-slide-up no-repeat delay-500">
-          <slot />
-        </div>
+        <CTA
+          class="mx-auto lsa lsa-slide-up no-repeat delay-500"
+          type="link"
+          href="/contact/#schedule"
+          text="Book Now"
+        />
       </div>
     </div>
   </header>
