--- a/src/components/ui/PageHeader.astro
+++ b/src/components/ui/PageHeader.astro
@@ -11,7 +11,7 @@ import { Picture } from 'astro:assets'
 
 export interface Props {
   title: string
-  subtitle: string
+  subtitle?: string
   image?: ImageMetadata
   imageAlt?: string
 }
